Added SrtAccessRoleName to environment Variables for AWS Shield Lambda role

--- a/code/shield/enableConfigure/cfn/shield-enable-configure.yaml
+++ b/code/shield/enableConfigure/cfn/shield-enable-configure.yaml
@@ -162,6 +162,7 @@ Resources:
           EmergencyContactPhone1: !Ref EmergencyContactPhone1
           EmergencyContactPhone2: !If [SecondEmergencyContact, !Ref EmergencyContactPhone2, !Ref "AWS::NoValue"]
           EmergencyContactCount: !Ref EmergencyContactCount
+          SrtAccessRoleName: !Ref SrtAccessRoleName
           EnabledProactiveEngagement: !Ref EnabledProactiveEngagement
           EnableDRTAccess: !Ref EnableDRTAccess
           AccountId: !Ref AWS::AccountId
